Finished 2nd Gatsby Tutorial

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "lea-bridge-area-framework",
-  "author": "ProjectCentre",
+  "author": "JNayar",
   "keywords": [
     "gatsby"
   ],
